# rust-web-server-cli

./: .env  .gitignore  Cargo.toml  README.md  cli.sh  mustache.config.toml  trans.sh
cli/: Cargo.toml  mustache.config.toml
cli/src/: main.rs  path.rs
mapper/: Cargo.toml  README.md  mustache.config.toml
mapper/examples/my_adventures/: models.rs  repository.rs
mapper/examples/my_favorites/: models.rs  repository.rs
mapper/examples/my_users/: models.rs  repository.rs
mapper/src/: main.rs
mapper/templates/: models.rs.mustache  repository.rs.mustache
trans/: Cargo.toml
trans/src/: main.rs
