[package]
name = "cli"
version = "0.1.0"
edition = "2018"
autotests = false

[[bin]]
bench = false
path = "cli/src/main.rs"
name = "gen"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
ramhorns = "0.12.0"
toml = "0.5.8"
walkdir = "2"

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"
