[package]
name = "mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
path = "src/main.rs"
name = "mapper-cli"

[dependencies]
tokio = { version = "1", features = ["macros"] }
sqlx = { version = "0.5", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "postgres",
] }
dotenv = "0.15.0"
ramhorns = "0.13.0"
toml = "0.5.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
walkdir = "2"
case = "1.0.0"
structopt = "0.3"
